<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/fira_sans_light"
        android:text="@string/text_welcome_string"
        android:textAlignment="center"
        android:textColor="#7F5A2E"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/nunito_sans_light"
        android:onClick="viewAboutALC"
        android:padding="15dp"
        android:text="@string/button_alc_string"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_welcome"
        app:layout_constraintStart_toStartOf="@+id/text_welcome"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/nunito_sans_light"
        android:onClick="viewProfile"
        android:padding="15dp"
        android:text="@string/button_profile_string"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button_alc"
        app:layout_constraintStart_toStartOf="@+id/button_alc"
        app:layout_constraintTop_toBottomOf="@+id/button_alc" />
</androidx.constraintlayout.widget.ConstraintLayout>